# Copyright 2025 The Lynx Authors. All rights reserved.
# Licensed under the Apache License Version 2.0 that can be found in the
# LICENSE file in the root directory of this source tree.

gfx_geometry_sources = [
  "axis.h",
  "box_shadow_operations.cc",
  "box_shadow_operations.h",
  "box_shadow_value.h",
  "direction.h",
  "filter_operations.cc",
  "filter_operations.h",
  "filter_value.h",
  "float_point.cc",
  "float_point.h",
  "float_point3d.cc",
  "float_point3d.h",
  "float_rect.cc",
  "float_rect.h",
  "float_rounded_rect.cc",
  "float_rounded_rect.h",
  "float_size.h",
  "float_vector2d.cc",
  "float_vector2d.h",
  "float_vector3d.cc",
  "float_vector3d.h",
  "math_util.h",
  "path.cc",
  "path.h",
  "point.h",
  "quaternion.cc",
  "quaternion.h",
  "rect.h",
  "size.h",
  "sticky_info.h",
  "transform.cc",
  "transform.h",
  "transform_operation.cc",
  "transform_operation.h",
  "transform_operations.cc",
  "transform_operations.h",
  "transform_origin.h",
  "transform_raw.h",
  "transform_util.cc",
  "transform_util.h",
]
