# Copyright 2013 The Flutter Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.
# Copyright 2023 The Lynx Authors. All rights reserved.
# Licensed under the Apache License Version 2.0 that can be found in the
# LICENSE file in the root directory of this source tree.

import("../../shell/config.gni")

software_deps = rebase_path(":gpu_surface_software")
gl_deps = rebase_path(":gpu_surface_gl")
metal_deps = rebase_path(":gpu_surface_metal")

template("shell_gpu_configuration") {
  assert(defined(invoker.enable_software),
         "Caller must declare if the Software backend must be enabled.")
  assert(defined(invoker.enable_gl),
         "Caller must declare if the Open GL backend must be enabled.")
  assert(defined(invoker.enable_metal),
         "Caller must declare if the Metal backend must be enabled.")

  group(target_name) {
    public_deps = []

    if (invoker.enable_software) {
      public_deps += [ software_deps ]
    }

    if (invoker.enable_gl) {
      public_deps += [ gl_deps ]
    }

    if (invoker.enable_metal) {
      public_deps += [ metal_deps ]
    }
  }

  config("${target_name}_config") {
    defines = []

    if (invoker.enable_software) {
      defines += [ "SHELL_ENABLE_SOFTWARE" ]
    }
    if (invoker.enable_gl) {
      defines += [ "SHELL_ENABLE_GL" ]
    }
    if (invoker.enable_metal) {
      defines += [ "SHELL_ENABLE_METAL" ]
    }
  }
}
